--- a/README
+++ b/README
@@ -4,6 +4,11 @@
 
 'the flying dutchman' 
 
+# gaper
+https://en.wikipedia.org/wiki/Gaper
+
+# pharmacist
+https://en.wikipedia.org/wiki/Pharmacist
 
 # mental disorder
 https://en.wikipedia.org/wiki/Mental_disorder
