--- a/README
+++ b/README
@@ -11,6 +11,9 @@ https://en.wikipedia.org/wiki/Gaper
 # pharmacist
 https://en.wikipedia.org/wiki/Pharmacist
 
+# shock and awe
+https://en.wikipedia.org/wiki/Shock_and_awe
+
 # mental disorder
 https://en.wikipedia.org/wiki/Mental_disorder
 
